<resources>
    <string name="app_name">challenge_seven</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="popularity">Popularity</string>
    <string name="movie_list">Movie List</string>
    <string name="profile">Profile</string>
    <string name="popular">Popular</string>
    <string name="welcome_username">Welcome, Username</string>
    <string name="poster">Poster</string>
    <string name="cast">Cast</string>
    <string name="description">Description</string>
    <string name="release_date">Release Date</string>
    <string name="language">Language</string>
    <string name="duration">Duration</string>
    <string name="get_rating">%s/10 IMDb</string>
    <string name="get_duration">%s Minutes</string>
    <string name="get_username">Welcome, %s</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="nama_lenkap">Nama Lenkap</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="favorite">Favorite</string>
    <string name="confirm_password">Confirm password</string>
    <string name="my_favorite">My Favorite</string>
    <string name="my_profile">My Profile</string>
    <string name="free_version">Free Version</string>
    <string name="paid_version">Paid Version</string>
</resources>